treewide: switch to java 8